<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/nested_scroll"
    tools:context="mainapplication.activity.SearchResultsActivity">
        <LinearLayout
            android:id="@+id/options_bar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_min="360dp"
            app:layout_constraintWidth_max="500dp"
            android:elevation="4dp"
            android:background="@drawable/white_rectangle"
            android:backgroundTint="@color/colorPrimary">
            <Button
                android:id="@+id/filter_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/filter"
                android:textSize="11sp"/>
            <Button
                android:id="@+id/map_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/title_activity_maps"
                android:textSize="11sp"/>
        </LinearLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/sort_tab"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/options_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_min="360dp"
        app:layout_constraintWidth_max="500dp"
        android:background="@drawable/white_rectangle"
        android:elevation="2dp">

        <android.support.design.widget.TabItem
        android:id="@+id/order_by_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/white_rectangle"
        android:text="@string/name"
        android:textColor="@color/dark_grey_accent"/>
        <android.support.design.widget.TabItem
            android:id="@+id/order_by_rating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rating"
            android:textColor="@color/dark_grey_accent"
            android:textSize="11sp"/>

        <android.support.design.widget.TabItem
            android:id="@+id/order_by_distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle"
            android:text="@string/distance"
            android:textColor="@color/dark_grey_accent"
            android:textSize="11sp"/>
    </android.support.design.widget.TabLayout>
        <TextView
            android:id="@+id/no_results_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/sort_tab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_min="360dp"
            app:layout_constraintWidth_max="500dp"
            android:text="@string/no_results"
            android:gravity="center"
            android:visibility="gone"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_results"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintTop_toBottomOf="@+id/sort_tab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/load_more_progress_bar"
            app:layout_constraintWidth_min="360dp"
            app:layout_constraintWidth_max="500dp"
            >

        </android.support.v7.widget.RecyclerView>
        <ProgressBar
            android:id="@+id/load_more_progress_bar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/search_results"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_min="360dp"
            app:layout_constraintWidth_max="500dp"
            android:visibility="gone"
            />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/sort_tab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_min="360dp"
        app:layout_constraintWidth_max="500dp"
        android:visibility="gone"
        />


</android.support.constraint.ConstraintLayout>
