<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="mainapplication.activity.MyBookingsActivity">
    <android.support.design.widget.TabLayout
        android:id="@+id/booking_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp">
        <android.support.design.widget.TabItem
            android:id="@+id/author_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/author"/>
        <android.support.design.widget.TabItem
            android:id="@+id/participant_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/participant"/>
    </android.support.design.widget.TabLayout>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/next_bookings"
        android:textStyle="bold"
        android:textSize="20sp"/>-->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:padding="160dp"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/next_bookings_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        />
    <ProgressBar
        android:id="@+id/load_more_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="180dp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/no_results_label"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/no_bookings"
        android:gravity="center"
        android:visibility="gone"/>
</LinearLayout>
