<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mainapplication.activity.SuggesterActivity"
    android:background="@drawable/background_suggester"
    android:backgroundTint="#30000000"
    android:backgroundTintMode="src_over"
    android:transitionName="searchBackground">
    <SearchView
        android:transitionName="search"
        android:id="@+id/search_field"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:padding="9dp"
        android:layout_margin="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/white_card"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintWidth_max="500dp"
        app:layout_constraintWidth_min="360dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/search_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/search_button"
        app:layout_constraintWidth_min="360dp"
        app:layout_constraintWidth_max="500dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_margin="8dp"
                android:id="@+id/location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/white_card"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/locations"
                    android:layout_margin="6dp"
                    android:textColor="@color/dark_grey_accent"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/location_view"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:id="@+id/facilities_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/white_card"
                android:elevation="2dp"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facilities"
                    android:layout_margin="6dp"
                    android:textColor="@color/dark_grey_accent"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/facilities_view"
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/search_button"
        android:transitionName="searchButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:elevation="2dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="500dp"
        app:layout_constraintWidth_min="360dp"/>

</android.support.constraint.ConstraintLayout>
